--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -24,7 +24,7 @@ body {
     align-items: center;
     justify-content: center;
     padding: 16px;
-    transition: background 0.3s, color 0.3s;
+    transition: background-color 0.3s, color 0.3s;
     overflow: hidden;
     -webkit-user-select: none;
     -moz-user-select: none;
